@@ -8,7 +8,6 @@ import org.mockito.configuration.IMockitoConfiguration;
 import org.mockito.exceptions.misusing.MockitoConfigurationException;
 import org.mockito.plugins.MockMaker;
 
-
 /**
  * Loads configuration or extension points available in the classpath.
  *
@@ -47,7 +46,8 @@ import org.mockito.plugins.MockMaker;
  */
 public class ClassPathLoader {
 
-    public static final String MOCKITO_CONFIGURATION_CLASS_NAME = "org.mockito.configuration.MockitoConfiguration";
+    public static final String MOCKITO_CONFIGURATION_CLASS_NAME =
+            "org.mockito.configuration.MockitoConfiguration";
 
     /**
      * @return configuration loaded from classpath or null
@@ -59,16 +59,24 @@ public class ClassPathLoader {
         try {
             configClass = Class.forName(MOCKITO_CONFIGURATION_CLASS_NAME);
         } catch (ClassNotFoundException e) {
-            //that's ok, it means there is no global config, using default one.
+            // that's ok, it means there is no global config, using default one.
             return null;
         }
 
         try {
-            return (IMockitoConfiguration) configClass.newInstance();
+            return (IMockitoConfiguration) configClass.getDeclaredConstructor().newInstance();
         } catch (ClassCastException e) {
-            throw new MockitoConfigurationException("MockitoConfiguration class must implement " + IMockitoConfiguration.class.getName() + " interface.", e);
+            throw new MockitoConfigurationException(
+                    "MockitoConfiguration class must implement "
+                            + IMockitoConfiguration.class.getName()
+                            + " interface.",
+                    e);
         } catch (Exception e) {
-            throw new MockitoConfigurationException("Unable to instantiate " + MOCKITO_CONFIGURATION_CLASS_NAME +" class. Does it have a safe, no-arg constructor?", e);
+            throw new MockitoConfigurationException(
+                    "Unable to instantiate "
+                            + MOCKITO_CONFIGURATION_CLASS_NAME
+                            + " class. Does it have a safe, no-arg constructor?",
+                    e);
         }
     }
 }
